fix: z-index of 'about' and 'entertainment' sections on main page

--- a/src/components/entertainment-block/entertainment-block.scss
+++ b/src/components/entertainment-block/entertainment-block.scss
@@ -3,6 +3,7 @@
 
 .entertainment-block {
     position: relative;
+    z-index: 2;
     display: flex;
     flex-direction: column;
     align-items: center;
